# src/main/java/com/ms/feedback/application/dto/FeedbackFilter.java
@@ -1,9 +1,9 @@
 package com.ms.feedback.application.dto;
 
-import com.ms.feedback.domain.enuns.TipoUrgenciaEnum;
+import com.ms.feedback.domain.enuns.UrgencyTypeEnum;
 
 
 public record FeedbackFilter(
-        String descricao,
-        TipoUrgenciaEnum tipoUrgencia
+        String description,
+        UrgencyTypeEnum urgencyType
 ){}
