# src/main/java/com/ms/feedback/entrypoint/controllers/mappers/FeedbackDtoMapper.java
@@ -1,10 +1,10 @@
 package com.ms.feedback.entrypoint.controllers.mappers;
 
-import com.ms.feedback.domain.enuns.TipoUrgenciaEnum;
+import com.ms.feedback.domain.enuns.UrgencyTypeEnum;
 import com.ms.feedback.domain.model.FeedbackDomain;
 import com.ms.loginDomain.gen.model.FeedbackRequestDto;
 import com.ms.loginDomain.gen.model.FeedbackResponseDto;
-import com.ms.loginDomain.gen.model.TipoUrgenciaEnumDto;
+import com.ms.loginDomain.gen.model.UrgencyTypeEnumDto;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.ReportingPolicy;
@@ -18,12 +18,12 @@ public interface FeedbackDtoMapper {
     FeedbackDtoMapper INSTANCE = Mappers.getMapper(FeedbackDtoMapper.class);
 
     @Mapping(target = "id", ignore = true)
-    @Mapping(target = "dataEnvio", ignore = true)
+    @Mapping(target = "sentDate", ignore = true)
     FeedbackDomain toFeedbackDomain(FeedbackRequestDto feedbackRequestDto);
 
     FeedbackResponseDto toFeedbackResponseDto(FeedbackDomain feedbackDomain);
 
     List<FeedbackResponseDto> toListFeedbackResponseDto(List<FeedbackDomain> feedbackDomains);
 
-    TipoUrgenciaEnum toTipoUrgenciaEnum(TipoUrgenciaEnumDto dto);
+    UrgencyTypeEnum toUrgencyTypeEnum(UrgencyTypeEnumDto dto);
 }
