# src/main/java/com/ms/feedback/entrypoint/controllers/mappers/FeedbackFilterMapper.java
@@ -1,7 +1,7 @@
 package com.ms.feedback.entrypoint.controllers.mappers;
 
 import com.ms.feedback.application.dto.FeedbackFilter;
-import com.ms.loginDomain.gen.model.TipoUrgenciaEnumDto;
+import com.ms.loginDomain.gen.model.UrgencyTypeEnumDto;
 import org.mapstruct.Mapper;
 import org.mapstruct.ReportingPolicy;
 import org.mapstruct.factory.Mappers;
@@ -11,5 +11,5 @@ public interface FeedbackFilterMapper {
 
     FeedbackFilterMapper INSTANCE = Mappers.getMapper(FeedbackFilterMapper.class);
 
-    FeedbackFilter toFilter(String descricao, TipoUrgenciaEnumDto tipoUrgencia, Integer limit, Integer offset);
+    FeedbackFilter toFilter(String description, UrgencyTypeEnumDto urgencyType, Integer limit, Integer offset);
 }
